Fixed tag editor misalignment in non-JS variant of reader page

--- a/librarian/static/scss/partials/_reader.scss
+++ b/librarian/static/scss/partials/_reader.scss
@@ -31,4 +31,18 @@ $reader-data-height: 120px;
   .inner {
     padding: 10px 20px;
   }
+
+  .tag-form {
+    display: inline-block;
+    margin-bottom: 1em;
+  }
+
+  .tags-help {
+    display: inline;
+    padding: 0;
+  }
+
+  .tags {
+    display: inline-block;
+  }
 }
